<?xml version="1.0" encoding="utf-8"?>
<ScrollView     xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/fragment_root">

    <LinearLayout
        android:id="@+id/no_auth_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="35dp">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/need_to_connect" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/auth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blueLight"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="@string/completestr_stats_games"/>
        <TextView
            android:id="@+id/villagers"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="@string/completestr_stats_win_v"/>
        <TextView
            android:id="@+id/wwolfs"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="@string/completestr_stats_win_w"/>

        <TextView
            android:id="@+id/history_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/completestr_game_history" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="12">

            <TextView
                android:id="@+id/winning_side"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:textStyle="italic"
                android:text="@string/completestr_winning_side" />

            <TextView
                android:id="@+id/villagers_list"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:textStyle="italic"
                android:text="@string/completestr_villagers" />

            <TextView
                android:id="@+id/werewolves_list"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="4"
                android:textStyle="italic"
                android:text="@string/completestr_werewolves" />

        </LinearLayout>

        <ListView
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>


</LinearLayout>

</ScrollView>