<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="16dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_play"
            android:layout_width="172dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            style="@style/BlueButton"
            android:text="@string/play" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_join"
            style="@style/BlueButton"
            android:layout_width="172dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/rejoin" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_auth"
            android:layout_width="172dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            style="@style/BlueButton"
            android:text="@string/connect" />

        <TextView
            android:id="@+id/txt_auth"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:text="@string/connect_exp"/>

    </LinearLayout>
</ScrollView>